<resources>
    <string name="app_name">Recycle\'listic</string>
    <string name="title_activity_user_side">UserSide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


    <string name="menu_home">Home</string>
    <string name="solid_waste_management">Solid-waste management, the collecting, treating, and disposing of solid material that is discarded because it has served its purpose or is no longer useful.</string>
    <string name="solid_waste_video">QGjPyPBpevY&amp;t</string>
    <string name="menu_craft">Craft Guides</string>
    <string name="craftingguide">Crafting guide helps you to make the unnecessary things to be more useful again. It gives some tutorials that might help you recycle the old things you have right now.</string>
    <string name="reportit">Waste here, waste there! Why not report it through our email? Report It! Is a feature for you to maintain the cleanliness of your surrounding. </string>
    <string name="pointssabasura">Wanna earn some points and convert it to something special? Well Pera sa Basura is the key for it! Just search for the following items shown in convertable materials and look for the nearest junk converters near you. </string>
    <string name="garbage">Be updated for the Garbage Truck Collector in your area. Just search for the specific city and barangay,then it would tell you the time to it\'s arrival.</string>


    <string name="menu_report">Report</string>
    <string name="menu_points">Points sa Basura</string>
    <string name="menu_garbage">Garbage Collector</string>

    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="log_out"><font fgcolor="#089C6F">Log Out</font></string>
    <string name="edit_profile"><u>Edit profile picture</u></string>
    <string name="edit_name"><u>Edit name</u></string>
    <string name="edit_email"><u>Edit email</u></string>
    <string name="edit_password"><u>Change password</u></string>
    <string name="edit_number"><u>Edit number</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <array name="cityLists">
        <item>CDO</item>
        <item>Davao City</item>
        <item>Ormoc City</item>
        <item>Manila City</item>
    </array>
    <array name="cdobarangay">
        <item>Nazareth</item>
        <item>Bugo</item>
        <item>Iponan</item>
        <item>Kauswagan</item>
        <item>Lumbia</item>
    </array>
    <array name="monthLists">
        <item>January</item>
        <item>Febuary</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <array name="dayLists">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </array>

    <array name="materialList">
        <item>Paper</item>
        <item>Plastic</item>
        <item>Metal</item>
    </array>

</resources>