<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:orientation="vertical"
    android:background="@drawable/background_2">

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/toolbar">

        <Button
            android:id="@+id/btnBackEditProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/backbtn"
            android:clickable="true" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nunito_regular"
                android:text="Profile"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="265dp"
                android:layout_height="265dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
        <TextView
            android:id="@+id/tvEditProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/etNameProfile"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout_2"
            android:padding="10dp"
            android:enabled="false"
            android:text="Jason S. Llanes"
            android:textColor="@color/white"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/editName"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/edit_name"
                    />
                <TextView
                    android:visibility="invisible"
                    android:id="@+id/editNamee"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="50dp"
                    android:text="Save Changes"
                    />
            </LinearLayout>

        <TextView
            android:id="@+id/tvNotVerified"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="EMAL NOT YET VERIFIED(Click here to verify)"
            />

            <EditText
                android:id="@+id/etEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_layout_2"
                android:padding="10dp"
                android:enabled="false"
                android:text="llanezjaizon@gmail.com"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/editEmail"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/edit_email"
                    />
                <TextView
                    android:visibility="invisible"
                    android:id="@+id/editEmaill"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="50dp"
                    android:text="Save Changes"
                    />
            </LinearLayout>
        <EditText
            android:id="@+id/etPasswordProfile"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout_2"
            android:padding="10dp"
            android:enabled="false"
            android:inputType="textPassword"
            android:text="llanezjaizon@gmail.com"
            android:textColor="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/editPassword"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/edit_password"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/etNumberProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:inputType="number"
                android:background="@drawable/button_layout_2"
                android:padding="10dp"
                android:text="09166873915"
                android:enabled="false"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/editNumber"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/edit_number"
                    />
                <TextView
                    android:visibility="invisible"
                    android:id="@+id/editNumberr"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="50dp"
                    android:text="Save Changes"
                    />
            </LinearLayout>
    </LinearLayout>
</ScrollView>





</LinearLayout>